[gd_scene load_steps=6 format=3 uid="uid://d3jrhhx7te6ex"]

[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="3"]
[ext_resource type="AudioStream" uid="uid://bmfbavfcn0pq8" path="res://Data/sfx/SFX_fart1.wav" id="3_02a7l"]
[ext_resource type="Script" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_audio.gd" id="4"]
[ext_resource type="PackedScene" uid="uid://cjrcdqw6fj18s" path="res://addons/UDSEngine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Checkbox_Template.tscn" id="4_2gmpk"]

[node name="Input_sfx" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("4")

[node name="Label" parent="." instance=ExtResource("3")]
custom_minimum_size = Vector2(0, 25)
anchors_preset = 0
anchor_right = 0.0
offset_right = 900.0
offset_bottom = 25.0
grow_horizontal = 2

[node name="Input" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_02a7l")
volume_db = -40.0
pitch_scale = 1.15

[node name="HBoxContainer" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 175)
offset_top = 29.0
offset_right = 900.0
offset_bottom = 596.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Space2" type="Label" parent="HBoxContainer"]
visible = false
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
offset_right = 298.0
offset_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="sfx_name" type="Button" parent="HBoxContainer/VBoxContainer2"]
offset_right = 298.0
offset_bottom = 186.0
size_flags_vertical = 3
text = "SFX_fart1.wav"

[node name="Play" type="Button" parent="HBoxContainer/VBoxContainer2"]
offset_top = 190.0
offset_right = 298.0
offset_bottom = 376.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Play"

[node name="Stop" type="Button" parent="HBoxContainer/VBoxContainer2"]
offset_top = 380.0
offset_right = 298.0
offset_bottom = 567.0
size_flags_vertical = 3
text = "Stop"

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
offset_left = 302.0
offset_right = 900.0
offset_bottom = 567.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Space" type="Label" parent="HBoxContainer/VBoxContainer"]
offset_right = 598.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Volume"

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
offset_top = 30.0
offset_right = 598.0
offset_bottom = 56.0

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
offset_right = 396.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = -40.0
max_value = 10.0
step = 0.1
value = 5.0
tick_count = 1

[node name="Volume" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer"]
offset_left = 400.0
offset_right = 598.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
text = "75%"

[node name="Space2" type="Label" parent="HBoxContainer/VBoxContainer"]
offset_top = 60.0
offset_right = 598.0
offset_bottom = 86.0
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Pitch"

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/VBoxContainer"]
offset_top = 90.0
offset_right = 598.0
offset_bottom = 116.0

[node name="HSlider" type="HSlider" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
offset_right = 396.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
min_value = 0.3
max_value = 2.0
step = 0.01
value = 1.15

[node name="Pitch" type="Label" parent="HBoxContainer/VBoxContainer/HBoxContainer2"]
offset_left = 400.0
offset_right = 598.0
offset_bottom = 26.0
size_flags_horizontal = 3
size_flags_vertical = 1
size_flags_stretch_ratio = 0.5
text = "50%"

[node name="LoopAudio" parent="HBoxContainer/VBoxContainer" instance=ExtResource("4_2gmpk")]
visible = false
true_text = "Yes"
false_text = "No"
label_text = "Loop Sound?"

[node name="Label" parent="HBoxContainer/VBoxContainer/LoopAudio" index="0"]
custom_minimum_size = Vector2(0, 25)

[node name="Hbox1" parent="HBoxContainer/VBoxContainer/LoopAudio" index="1"]
custom_minimum_size = Vector2(0, 50)

[node name="Input" parent="HBoxContainer/VBoxContainer/LoopAudio/Hbox1/Background" index="0"]
offset_top = -12.0
offset_bottom = 12.0
text = "No"

[node name="input_templateBuffer" parent="." instance=ExtResource("2")]
anchor_right = 0.0
offset_top = 600.0
offset_right = 900.0
offset_bottom = 600.0

[connection signal="button_up" from="HBoxContainer/VBoxContainer2/sfx_name" to="." method="edit_audio_file"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer2/Play" to="." method="play_audio"]
[connection signal="button_up" from="HBoxContainer/VBoxContainer2/Stop" to="." method="stop_audio_playback"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer/HSlider" to="." method="_on_Volume_value_changed"]
[connection signal="value_changed" from="HBoxContainer/VBoxContainer/HBoxContainer2/HSlider" to="." method="_on_pitch_value_changed"]

[editable path="HBoxContainer/VBoxContainer/LoopAudio"]
